--- a/app/src/assets/scss/main.scss
+++ b/app/src/assets/scss/main.scss
@@ -1,3 +1,9 @@
-h1 {
-    color: #C8C8C8;
-}
+@import "abstracts/mixins";
+@import "abstracts/variables";
+
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+
+@import "components/hero";
