feat: 🎸 Finalizando botão da página de boas-vindas

--- a/app/src/assets/scss/base/_utilities.scss
+++ b/app/src/assets/scss/base/_utilities.scss
@@ -1,3 +1,7 @@
 .container { padding: 3rem; }
 
+.full-width { width: 100%; }
 .center-text { width: 100%; text-align: center; }
+
+.mb2 { margin-bottom: 2rem; }
+.mb4 { margin-bottom: 4rem; }
