--- a/app/src/assets/scss/base/_typography.scss
+++ b/app/src/assets/scss/base/_typography.scss
@@ -21,3 +21,19 @@ body {
     line-height: 1.2;
     color: var(--color-gray);
 }
+
+.link {
+    text-decoration: none;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 2rem;
+    letter-spacing: .03rem;
+    line-height: 1.2;
+    color: var(--color-primary);
+
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
