--- a/app/src/assets/scss/components/_button.scss
+++ b/app/src/assets/scss/components/_button.scss
@@ -21,6 +21,20 @@
     }
 
     &:hover {
+        outline: none;
         box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    }
+
+    &--prox {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        box-shadow: -.3rem -.3rem 1rem rgba(0, 0, 0, .2);
+        border-radius: 1.6rem 0 0 0;
+
+        &:hover {
+            transform: scale(1.05);
+            box-shadow: -.5rem -.5rem 1.5rem rgba(0, 0, 0, .2);
+        }
     }
 }
