--- a/app/src/assets/scss/components/_button.scss
+++ b/app/src/assets/scss/components/_button.scss
@@ -26,9 +26,6 @@
     }
 
     &--prox {
-        position: fixed;
-        bottom: 0;
-        right: 0;
         box-shadow: -.3rem -.3rem 1rem rgba(0, 0, 0, .2);
         border-radius: 1.6rem 0 0 0;
 
@@ -36,5 +33,23 @@
             transform: scale(1.05);
             box-shadow: -.5rem -.5rem 1.5rem rgba(0, 0, 0, .2);
         }
+    }
+}
+
+.button__skip {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-family: inherit;
+    font-weight: 800;
+    letter-spacing: .05rem;
+    color: var(--color-gray-dark);
+    transition: all .2s;
+
+    cursor: pointer;
+
+    &:hover {
+        color: var(--color-gray-black);
     }
 }
