--- a/app/src/assets/scss/components/_step.scss
+++ b/app/src/assets/scss/components/_step.scss
@@ -2,7 +2,7 @@
     display: flex;
     padding: 1rem 2rem;
 
-    &-stage {
+    &__stage {
         height: 1.5rem;
         width: 1.5rem;
         border-radius: 50%;
@@ -17,7 +17,7 @@
         }
     }
 
-    &-stage:not(:last-child) {
+    &__stage:not(:last-child) {
         margin-right: 1rem;
     }
 }
