--- a/app/src/assets/scss/components/_button.scss
+++ b/app/src/assets/scss/components/_button.scss
@@ -30,22 +30,23 @@
         border-radius: 1.6rem 0 0 0;
 
         &:hover {
-            transform: scale(1.05);
             box-shadow: -.5rem -.5rem 1.5rem rgba(0, 0, 0, .2);
         }
     }
 }
 
-.button__skip {
+.button__link {
     display: inline-block;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 2.4rem;
     font-family: inherit;
     font-weight: 800;
     letter-spacing: .05rem;
     color: var(--color-gray-dark);
     transition: all .2s;
+    background-color: transparent;
+    border: none;
 
     cursor: pointer;
 
