feat: 🎸 Criando formulário de Signup

--- a/app/src/assets/scss/abstracts/_variables.scss
+++ b/app/src/assets/scss/abstracts/_variables.scss
@@ -1,7 +1,9 @@
 :root {
-    --color-primary: #82BAFF ;
+    --color-primary: #54A0FF;
 
     --color-black: #000000;
     --color-white: #FFFFFF;
-    --color-gray: #CCCCCC;
+    --color-gray-dark: #333333;
+    --color-gray: #767676;
+    --color-gray-light: #f5f5f5;
 }
