--- a/app/src/assets/scss/base/_utilities.scss
+++ b/app/src/assets/scss/base/_utilities.scss
@@ -1,5 +1,7 @@
 .container { padding: 3rem; }
 
+.rounded { border-radius: 18rem !important; }
+
 .full-width { width: 100%; }
 .center-text { width: 100%; text-align: center; }
 .center-box { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
