--- a/app/src/assets/scss/main.scss
+++ b/app/src/assets/scss/main.scss
@@ -11,4 +11,6 @@
 @import "components/input";
 @import "components/step";
 
-@import "views/tour.scss";
+@import "views/app";
+@import "views/signup";
+@import "views/tour";
