--- a/app/src/assets/scss/components/_step.scss
+++ b/app/src/assets/scss/components/_step.scss
@@ -3,16 +3,18 @@
     padding: 1rem 2rem;
 
     &__stage {
-        height: 1.5rem;
-        width: 1.5rem;
-        border-radius: 50%;
+        height: 1rem;
+        width: 1rem;
+        border-radius: 1rem;
         background-color: var(--color-gray);
+        transition: all .2s;
 
         &:hover {
             cursor: pointer;
         }
 
         &--active {
+            width: 2.5rem;
             background-color: var(--color-primary);
         }
     }
