--- a/app/src/assets/scss/views/_tour.scss
+++ b/app/src/assets/scss/views/_tour.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
 
-    height: 100vh;
+    min-height: 100vh;
 
     &__menu-top {
         display: flex;
