feat: 🎸 Construindo loading global

--- a/app/src/assets/scss/main.scss
+++ b/app/src/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "components/hero";
 @import "components/button";
 @import "components/input";
+@import "components/loading";
 @import "components/step";
 
 @import "views/app";
