--- a/app/src/assets/scss/base/_animations.scss
+++ b/app/src/assets/scss/base/_animations.scss
@@ -33,3 +33,13 @@
         transform: translateX(0);        
     }
 }
+
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
