--- a/app/src/assets/scss/components/_loading.scss
+++ b/app/src/assets/scss/components/_loading.scss
@@ -9,20 +9,43 @@
   visibility: visible;
   transition: all .3s;
 
-  backdrop-filter: blur(1rem);
+  backdrop-filter: blur(.4rem);
   background-color: rgba(0, 0, 0, .2);
 
   &__content {
     position: absolute;
-    width: 10rem;
-    height: 10rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 15rem;
+    height: 15rem;
     background-color: var(--color-white);
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, .2);
     border-radius: .8rem;
     overflow: hidden;
     transition: all .5s .2s;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &--spinner {
+      width: 6rem;
+      height: 6rem;
+      border: .5rem solid var(--color-gray-light);
+      border-top: .5rem solid var(--color-primary);
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      animation: loading 1s linear infinite;
+      
+      cursor: progress;
+    }
+  
+    &--text {
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: var(--color-gray-dark);
+    }
   }
 }
