--- a/app/src/assets/scss/main.scss
+++ b/app/src/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "components/button";
 @import "components/input";
 @import "components/loading";
+@import "components/menu";
 @import "components/step";
 
 @import "views/app";
