--- a/app/src/assets/scss/abstracts/_variables.scss
+++ b/app/src/assets/scss/abstracts/_variables.scss
@@ -4,6 +4,6 @@
     --color-black: #000000;
     --color-white: #FFFFFF;
     --color-gray-dark: #333333;
-    --color-gray: #767676;
+    --color-gray: #9e9e9e;
     --color-gray-light: #f5f5f5;
 }
