--- a/app/src/assets/scss/base/_typography.scss
+++ b/app/src/assets/scss/base/_typography.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .title {
-    display: inline-block;
+    display: block;
     font-weight: 800;
     font-size: 2.5rem;
     letter-spacing: .05rem;
@@ -14,8 +14,8 @@ body {
 }
 
 .subtitle {
-    display: inline-block;
-    font-weight: 300;
+    display: block;
+    font-weight: 400;
     font-size: 2rem;
     letter-spacing: .03rem;
     line-height: 1.2;
