feat: 🎸 Criando estilização dos stories

--- a/app/src/assets/scss/components/_button.scss
+++ b/app/src/assets/scss/components/_button.scss
@@ -11,7 +11,7 @@
         letter-spacing: .08rem;
         color: var(--color-white);
         background-color: var(--color-primary);
-        border-radius: 1rem;
+        border-radius: var(--border-radius);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
         border: none;
         padding: 1.5rem 3rem;
