--- a/app/src/assets/scss/components/_input.scss
+++ b/app/src/assets/scss/components/_input.scss
@@ -1,18 +1,22 @@
 .input {
     display: block;
     padding: 1.5rem;
-    color: var(--color-gray-dark);
+    color: var(--color-gray);
     background-color: var(--color-gray-light);
     font-size: 1.8rem;
     font-weight: 700;
     font-family: inherit;
     border: .2rem solid var(--color-gray-light);
-    border-radius: 1rem;
+    border-radius: var(--border-radius);
     transition: all .2s;
 
     &:focus {
         outline: none;
         border: .2rem solid var(--color-primary);
+    }
+
+    &::placeholder {
+        color: var(--color-gray);
     }
 }
 
@@ -29,13 +33,13 @@
     &__input {
         display: block;
         padding: 1.5rem 1.5rem 1.5rem 4.5rem;
-        color: var(--color-gray);
+        color: var(--color-gray-dark);
         background-color: var(--color-gray-light);
         font-size: 1.8rem;
         font-weight: 700;
         font-family: inherit;
         border: .2rem solid var(--color-gray-light);
-        border-radius: 1rem;
+        border-radius: var(--border-radius);
         transition: all .2s;
 
         &:focus {
