--- a/app/src/assets/scss/main.scss
+++ b/app/src/assets/scss/main.scss
@@ -12,7 +12,9 @@
 @import "components/loading";
 @import "components/menu";
 @import "components/step";
+@import "components/stories";
 
 @import "views/app";
+@import "views/home";
 @import "views/signup";
 @import "views/tour";
