refactor: 💡 Definindo nova arquitetura de componentes

--- a/app/src/assets/scss/abstracts/_variables.scss
+++ b/app/src/assets/scss/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 :root {
     --color-primary: #54A0FF;
 
+    --color-error: #ee642d;
+
     --color-black: #000000;
     --color-white: #FFFFFF;
     --color-gray-dark: #333333;
